--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-30  Stanislav Malyshev  <stas@zend.com>
+
+    * zend_execute.c:
+      fix crash on exceptions when return value of the inside function is used
+
 2003-05-29  Marcus Boerger  <marcus.boerger@post.rwth-aachen.de>
 
     * zend_compile.c
