--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-06  Sascha Schumann  <sascha@schumann.cx>
+
+    * zend_multiply.h:
+      mfb #24025 fix
+
 2003-06-04  Stanislav Malyshev  <stas@zend.com>
 
     * zend.c:
