--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,13 @@
+2003-06-21  Marcus Boerger  <marcus.boerger@post.rwth-aachen.de>
+
+    * zend_language_parser.y:
+      WS
+
+    * zend_compile.c
+      zend_compile.h
+      zend_language_parser.y:
+      Add final classes
+
 2003-06-16  Stanislav Malyshev  <stas@zend.com>
 
     * zend_execute.c:
