--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,23 @@
+2003-07-04  Andi Gutmans  <andi@zend.com>
+
+    * zend_alloc.c
+      zend_mm.c
+      zend_mm.h:
+      - Add heap to memory manager. This should improve performance.
+      - Enabling it by default so that it gets tested. We should decide before
+      beta 2 if we want to revert back to malloc or not.
+      - Thanks to Sebastian for benchmarking it
+
+2003-07-04  Sebastian Bergmann  <sb@sebastian-bergmann.de>
+
+    * zend_reflection_api.c:
+      2 * TSRMLS_FETCH() -> 1 * TSRMLS_DC
+
+2003-07-04  George Schlossnagle  <george@omniti.com>
+
+    * zend_reflection_api.c:
+      ws fix
+
 2003-07-03  Marcus Boerger  <marcus.boerger@post.rwth-aachen.de>
 
     * zend_compile.c:
