--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,10 @@
+2003-07-06  George Schlossnagle  <george@omniti.com>
+
+    * zend_API.c
+      zend_API.h:
+      add convenience functions or adding class properties.  Ok'd for commit by
+      Andi.
+
 2003-07-04  Andi Gutmans  <andi@zend.com>
 
     * zend_alloc.c
