--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-08  Zeev Suraski  <zeev@zend.com>
+
+    * zend_execute.c:
+      initial refactoring for assign-op handling of objects
+
 2003-07-07  Zeev Suraski  <zeev@zend.com>
 
     * zend_API.c
