--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-12  Andi Gutmans  <andi@zend.com>
+
+    * zend_API.c:
+      - WS
+
 2003-07-11  Andi Gutmans  <andi@zend.com>
 
     * zend_API.c:
